--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "nanoid": "^5.0.4",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
+    "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.18.0",
