--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "",
     "main": "server/app.js",
     "scripts": {
-      "start": "cd client && npm start",
-      "backend": "cd server && npm start"
+      "dev": "cd client && npm start & cd server && npm run start:dev",
+      "start": "cd client && npm start; cd server && npm run start"
     },
     "keywords": [],
     "author": "Volha Tsekalo",
