--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
     "description": "",
     "main": "server/app.js",
     "scripts": {
-      "dev": "cd client && npm start & cd server && npm run start:dev",
-      "start": "cd client && npm start; cd server && npm run start"
+        "dev": "cd client && npm start & cd server && npm run start:dev",
+        "start": "cd client && npm start; cd server && npm run start"
     },
     "keywords": [],
     "author": "Volha Tsekalo",
-    "license": "ISC"
-  }
+    "license": "ISC",
+    "dependencies": {
+        "react-confirm-alert": "^3.0.6"
+    }
+}
