--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "nanoid": "^5.0.4",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
