--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^3.1.0",
     "nanoid": "^5.0.4",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
