--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Pet Health App",
   "icons": [
     {
-      "src": "petlogo2.jpg",
+      "src": "petlogo.jpg",
       "type": "image/png",
       "sizes": "30x30"
     }
